# XLAIR

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  XLAIR.code-workspace  XLAIR.sln  compose.yml
.devcontainer/: devcontainer.json
SheetsAnalyzer/: SheetsAnalyzer.vcxproj  SheetsAnalyzer.vcxproj.filters  stdafx.h
SheetsAnalyzer/include/: Constant.hpp  Metadata.hpp  SheetData.hpp  SheetsAnalyzer.hpp
SheetsAnalyzer/include/SUSAnalyzer/: README.md  SUSAnalyzer.hpp  SUSData.hpp  SuSData.hpp
SheetsAnalyzer/include/SUSAnalyzer/internal/: AnalyzeCommandLine.hpp  AnalyzeDataLine.hpp  AnalyzeNotes.ipp  Utils.hpp  Utils.ipp
SheetsAnalyzer/include/UGCAnalyzer/: README.md
SheetsAnalyzer/include/internal/: AnalyzeFile.hpp  Utils.ipp
SheetsAnalyzer/src/: SheetsAnalyzer.cpp
SheetsAnalyzer/src/SUSAnalyzer/: SUSAnalyzer.cpp  SUSData.cpp
SheetsAnalyzer/src/SUSAnalyzer/internal/: AnalyzeCommandLine.cpp  AnalyzeDataLine.cpp  Utils.cpp
SheetsAnalyzer/src/internal/: AnalyzeJsonFile.cpp  AnalyzeTomlFile.cpp
SheetsViewer/: SheetsViewer.vcxproj  SheetsViewer.vcxproj.filters
SheetsViewer/App/sheets/example/: 0.sus  1.sus  hispeed.sus  hold.sus  holdtest.sus  music.json
SheetsViewer/App/sheets/example_toml/: music.toml
SheetsViewer/src/: Main.cpp  SheetManager.cpp  SheetManager.hpp  SheetViewer.cpp  SheetViewer.hpp  SideMenu.cpp  SideMenu.hpp
SheetsViewer/src/addon/: LoadingAnimationAddon.cpp  LoadingAnimationAddon.hpp  NotificationAddon.cpp  NotificationAddon.hpp  SheetManagerAddon.cpp  SheetManagerAddon.hpp
SheetsViewer/src/addon/detail/: SheetManagerAddon.ipp
XLAIR/: Main.cpp  XLAIR.vcxproj  XLAIR.vcxproj.filters
XLAIR/App/: .gitignore  config.example.toml  config.toml
XLAIR/App/mockdata/api/users/00000000-0000-0000-0000-000000000000/: records.json
XLAIR/App/mockdata/api/users/by_card/: 00000000.json
XLAIR/App/mockdata/sheets/: 0.sus  music.json
XLAIR/src/: Common.hpp  Main.cpp  stdafx.h
XLAIR/src/app/consts/: Config.hpp  Scene.hpp  Version.hpp
XLAIR/src/app/di/: Addon.cpp  Addon.hpp  Providers.cpp  Providers.hpp  SceneController.cpp  SceneController.hpp
XLAIR/src/app/interfaces/: Controller.hpp  IApiClient.hpp  ICardReader.hpp  IConfigProvider.hpp  IController.hpp  ISheetProvider.hpp
XLAIR/src/app/types/: Config.hpp  Scene.hpp
XLAIR/src/app/usecases/: App.hpp  Assets.cpp  Assets.hpp  InitializeApp.cpp  InitializeApp.hpp  LoadConfig.cpp  LoadConfig.hpp  LoadSheet.hpp
XLAIR/src/core/features/: ApiCall.hpp  CardReaderManager.cpp  CardReaderManager.hpp  ControllerManager.cpp  ControllerManager.hpp  DemoMusic.cpp  DemoMusic.hpp  SheetRepository.cpp  SheetRepository.hpp  SparklePoints.hpp
XLAIR/src/core/features/detail/: ApiCall.ipp
XLAIR/src/core/types/: ApiCall.hpp  Config.hpp  DeviceInput.hpp  Difficulty.hpp  PlayerData.hpp  Record.hpp  Scene.hpp  Scoring.hpp  Sheet.hpp  UserData.hpp
XLAIR/src/infra/api/: ApiClientMock.cpp  ApiClientMock.hpp  ApiClientProd.cpp  ApiClientProd.hpp  Parser.cpp  Parser.hpp
XLAIR/src/infra/card/: CardReaderMock.cpp  CardReaderMock.hpp  PasoriRCS3xx.cpp  PasoriRCS3xx.hpp
XLAIR/src/infra/config/: TomlConfigProvider.cpp  TomlConfigProvider.hpp
XLAIR/src/infra/controller/: ControllerGroundSlider.cpp  ControllerGroundSlider.hpp  ControllerMock.cpp  ControllerMock.hpp  ControllerMockKeyboard.cpp  ControllerMockKeyboard.hpp  ControllerV1.cpp  ControllerV1.hpp  Mock.cpp  Mock.hpp
XLAIR/src/infra/sheet/: SheetMock.cpp  SheetMock.hpp  SheetProd.cpp  SheetProd.hpp
XLAIR/src/ui/addons/: HomographyAddon.cpp  HomographyAddon.hpp  TextShadowAddon.cpp  TextShadowAddon.hpp
XLAIR/src/ui/components/: GameMusicPlate.cpp  GameMusicPlate.hpp  GameScoreBar.cpp  GameScoreBar.hpp  MenuTimerPlate.cpp  MenuTimerPlate.hpp  PlayerNameplate.cpp  PlayerNameplate.hpp  ScrollingText.hpp  SliderMappingGuide.cpp  SliderMappingGuide.hpp  Tile.cpp  Tile.hpp  UserNameplate.cpp  UserNameplate.hpp
XLAIR/src/ui/primitives/: Arrow.cpp  Arrow.hpp  EighthNote.cpp  EighthNote.hpp  Note.cpp  Note.hpp  SparkleShape.cpp  SparkleShape.hpp
XLAIR/src/ui/scenes/: Boot.cpp  Boot.hpp  FinalResult.cpp  FinalResult.hpp  Game.cpp  Game.hpp  Login.cpp  Login.hpp  MusicSelect.cpp  MusicSelect.hpp  Result.cpp  Result.hpp  Title.cpp  Title.hpp
XLAIR/src/ui/theme/: DifficultyTheme.hpp  Palette.hpp
apps/: CMakeLists.txt
apps/SheetsViewer/: CMakeLists.txt
apps/SheetsViewer/data/: settings.toml
apps/SheetsViewer/src/: Main.cpp
apps/XLAIR/: CMakeLists.txt
apps/XLAIR/src/: Main.cpp
apps/XLAIR/src/XLAIR/: DataDirectory.hpp
apps/XLAIR/src/macOS/: Info.plist
cmake/: AddSiv3DApplication.cmake  SyncData.cmake
cmake/Siv3D/: Archive.cmake  Siv3D.cmake
cmake/Siv3D/platform/: MacOS.cmake  Windows.cmake
data/: settings.toml
libs/: CMakeLists.txt
libs/SheetsAnalyzer/: CMakeLists.txt
libs/SheetsAnalyzer/include/SheetsAnalyzer/: SheetsAnalyzer.hpp
libs/SheetsAnalyzer/src/: SheetsAnalyzer.cpp
scripts/: setup.ps1
siv3d/: Siv3D.cmake
siv3d/platform/: Linux.cmake  MacOS.cmake  Windows.cmake
siv3d/platform/Linux/: GenerateAppImage.cmake.in
src/: Main.cpp
